--- a/client/pages/Dashboard.html
+++ b/client/pages/Dashboard.html
@@ -1,3 +1,7 @@
 <template name="Dashboard">
+	{{#if isInRole 'admin'}}
     <h1 class="page-title">Dashboard</h1>
+	{{else}}
+    <h1 class="page-title">Not Authorized</h1>
+	{{/if}}
 </template>
